XP-2353 UserWizard: inputs for email and password have wrong height and layout is broken * Restored missing stylesheet for user-wizard-panel * Fixed issue with height of input fields * Fixed broken layout of tag fields

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/form-icon.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/form-icon.less
@@ -1,4 +1,4 @@
-.form-icon {
+.@{_COMMON_PREFIX}form-icon {
   background: transparent;
   border: 1px solid transparent;
   padding: 0;
