--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-header.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-header.less
@@ -40,13 +40,13 @@
 }
 
 .thumbnail-uploader + .wizard-header,
-.form-icon + .wizard-header {
+.@{_COMMON_PREFIX}form-icon + .wizard-header {
   margin-left: 116px;
 }
 
 ._0-240, ._240-360, ._360-540 {
   .thumbnail-uploader + .wizard-header,
-  .form-icon + .wizard-header {
+  .@{_COMMON_PREFIX}form-icon + .wizard-header {
     margin-left: 86px;
     margin-right: 40px;
   }
