--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -16,7 +16,7 @@
   }
 
   .thumbnail-uploader,
-  .form-icon {
+  .@{_COMMON_PREFIX}form-icon {
     float: left;
     width: 64px;
     height: 64px;
@@ -85,7 +85,7 @@
 
   ._0-240, ._240-360, ._360-540 {
     .thumbnail-uploader,
-    .form-icon {
+    .@{_COMMON_PREFIX}form-icon {
       margin: 5px 10px 0 10px;
     }
   }
